conatct btn update

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             my work. With 1 years experience
             as a web developer, I have acquired the skills and knowledge necessary to make your project a
             success. I enjoy every step of the design and develop process, from discussion and collaboration.</p>
-          <a href="#" class="btn btn-primary btn-lg rounded-4">Contact Me</a>
+          <a href="#contact" class="btn btn-primary btn-lg rounded-4">Contact Me</a>
         </div>
       </div>
     </div>
